@@ -120,6 +120,22 @@ name|solr
 operator|.
 name|search
 operator|.
+name|SolrIndexSearcher
+operator|.
+name|ProcessedFilter
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|search
+operator|.
 name|QueryUtils
 import|;
 end_import
@@ -632,10 +648,8 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
-name|SolrIndexSearcher
-operator|.
 name|ProcessedFilter
-name|pf
+name|filter
 init|=
 name|searcher
 operator|.
@@ -651,13 +665,6 @@ operator|.
 name|getFilterList
 argument_list|()
 argument_list|)
-decl_stmt|;
-name|Filter
-name|luceneFilter
-init|=
-name|pf
-operator|.
-name|filter
 decl_stmt|;
 name|Query
 name|query
@@ -683,7 +690,7 @@ name|computeGroupedDocSet
 argument_list|(
 name|query
 argument_list|,
-name|luceneFilter
+name|filter
 argument_list|,
 name|collectors
 argument_list|)
@@ -701,7 +708,7 @@ name|computeDocSet
 argument_list|(
 name|query
 argument_list|,
-name|luceneFilter
+name|filter
 argument_list|,
 name|collectors
 argument_list|)
@@ -721,7 +728,7 @@ name|searchWithTimeLimiter
 argument_list|(
 name|query
 argument_list|,
-name|luceneFilter
+name|filter
 argument_list|,
 name|MultiCollector
 operator|.
@@ -747,7 +754,7 @@ name|searchWithTimeLimiter
 argument_list|(
 name|query
 argument_list|,
-name|luceneFilter
+name|filter
 argument_list|,
 literal|null
 argument_list|)
@@ -762,8 +769,8 @@ parameter_list|(
 name|Query
 name|query
 parameter_list|,
-name|Filter
-name|luceneFilter
+name|ProcessedFilter
+name|filter
 parameter_list|,
 name|List
 argument_list|<
@@ -814,7 +821,7 @@ name|searchWithTimeLimiter
 argument_list|(
 name|query
 argument_list|,
-name|luceneFilter
+name|filter
 argument_list|,
 name|termAllGroupHeadsCollector
 argument_list|)
@@ -833,7 +840,7 @@ name|searchWithTimeLimiter
 argument_list|(
 name|query
 argument_list|,
-name|luceneFilter
+name|filter
 argument_list|,
 name|MultiCollector
 operator|.
@@ -902,8 +909,8 @@ parameter_list|(
 name|Query
 name|query
 parameter_list|,
-name|Filter
-name|luceneFilter
+name|ProcessedFilter
+name|filter
 parameter_list|,
 name|List
 argument_list|<
@@ -989,7 +996,7 @@ name|searchWithTimeLimiter
 argument_list|(
 name|query
 argument_list|,
-name|luceneFilter
+name|filter
 argument_list|,
 name|docSetCollector
 argument_list|)
@@ -1064,8 +1071,8 @@ name|Query
 name|query
 parameter_list|,
 specifier|final
-name|Filter
-name|luceneFilter
+name|ProcessedFilter
+name|filter
 parameter_list|,
 name|Collector
 name|collector
@@ -1124,6 +1131,38 @@ name|collector
 argument_list|,
 name|hitCountCollector
 argument_list|)
+expr_stmt|;
+block|}
+name|Filter
+name|luceneFilter
+init|=
+name|filter
+operator|.
+name|filter
+decl_stmt|;
+if|if
+condition|(
+name|filter
+operator|.
+name|postFilter
+operator|!=
+literal|null
+condition|)
+block|{
+name|filter
+operator|.
+name|postFilter
+operator|.
+name|setLastDelegate
+argument_list|(
+name|collector
+argument_list|)
+expr_stmt|;
+name|collector
+operator|=
+name|filter
+operator|.
+name|postFilter
 expr_stmt|;
 block|}
 try|try
