@@ -2210,6 +2210,92 @@ argument_list|,
 literal|"true"
 argument_list|)
 expr_stmt|;
+comment|// SOLR-3960 - include a postfilter
+for|for
+control|(
+name|String
+name|facet
+range|:
+operator|new
+name|String
+index|[]
+block|{
+literal|"false"
+block|,
+literal|"true"
+block|}
+control|)
+block|{
+for|for
+control|(
+name|String
+name|fcache
+range|:
+operator|new
+name|String
+index|[]
+block|{
+literal|""
+block|,
+literal|" cache=false cost=200"
+block|}
+control|)
+block|{
+name|query
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"rows"
+argument_list|,
+literal|100
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id,"
+operator|+
+name|i1
+argument_list|,
+literal|"group.limit"
+argument_list|,
+literal|10
+argument_list|,
+literal|"sort"
+argument_list|,
+name|i1
+operator|+
+literal|" asc, id asc"
+argument_list|,
+literal|"group"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"group.field"
+argument_list|,
+name|i1
+argument_list|,
+literal|"fq"
+argument_list|,
+literal|"{!frange l=50 "
+operator|+
+name|fcache
+operator|+
+literal|"}"
+operator|+
+name|tlong
+argument_list|,
+literal|"facet.field"
+argument_list|,
+name|t1
+argument_list|,
+literal|"facet"
+argument_list|,
+name|facet
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 name|ModifiableSolrParams
 name|params
 init|=
